--- a/localLaundryApp/package.json
+++ b/localLaundryApp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@awrminkhodaei/react-native-horizontal-datepicker": "^0.1.6",
     "@expo/webpack-config": "^19.0.0",
+    "@lottiefiles/react-lottie-player": "^3.5.3",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@reduxjs/toolkit": "^1.9.7",
